# pydifact

./: .gitignore  .pylintrc  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  Pipfile  README.md  TODO.md  dev.ipynb  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  wip.py
.github/: FUNDING.yml  dependabot.yaml
.github/workflows/: check-format.yml  check_format.yml  isort.yml  packaging_test.yml  typecheck.yml  unittests.yml
docs/: API.rst  conf.py  development.md  edi_version_changes.md  index.rst
edi_analyzer/: __init__.py  analyze.py
edi_energy/: __init__.py  dev.ipynb  energy_collections.py  energy_formats.py  energy_segments.py  errors.py  quotes.txt  read_edienergy.py  segmentcollection.py  segments.py  serializer.py
pydifact/: __init__.py  api.py  constants.py  exceptions.py  mapping.py  message.py  msg_validation.py  parser.py  py.typed  segmentcollection.py  segments.py  serializer.py  token.py  tokenizer.py  utils.py
pydifact/control/: characters.py
pydifact/edi_analyzer/: analyze.py
pydifact/edi_energy/: __init__.py  config.json  create_from_template.py  energy_collections.py  energy_formats.py  energy_segments.py  segmentcollection.py
pydifact/generator/: base.py  constants.py  create_directory_urls.py  downloads.py  edcd.py  eded.py  edmd.py  edsd.py  runner.py  uncl.py  unsl.py  utils.py
pydifact/generator/internal/service/: EDSD.1  EDSD.2  UNSL.2
pydifact/generator/zips/: README.md
pydifact/syntax/: __init__.py  common.py  registry.py  v1.py  v3.py  v4.py
pydifact/syntax/common/: __init__.py  data.py  sources.py  types.py
pydifact/syntax/d21a/: codes.xml  composite_data_elements.xml  data_elements.xml
pydifact/syntax/d24a/: codes.xml  composite.py  data.py  data_elements.xml  messages.py  segments.py  segments.xml
pydifact/syntax/oemed/: __init__.py
pydifact/syntax/v1/: __init__.py  composite.py  data.py  segments.py
pydifact/syntax/v2/: __init__.py
pydifact/syntax/v3/: __init__.py
pydifact/syntax/v4/: __init__.py  codes.py  composite.py  data.py
scripts/: generate_xml.sh
scripts/download/: README.md
scripts/generator/: constants.py  helpers.py  pydifact_generator.py  specs.py
src/: setup.py
src/pydifact/: ControlCharacter.py  Message.py  Parser.py  Segment.py  Segments.py  Serializer.py  Token.py  Tokenizer.py  __init__.py  message.py  parser.py  segments.py  serializer.py  token.py  tokenizer.py
src/pydifact/control/: __init__.py  characters.py
src/tests/: InAndOutTest.py  MessageTest.py  SegmentTest.py  SerializerTest.py  TokenTests.py  TokenizerTests.py  test_characters.py  test_controlcharacters.py  test_huge_message.py  test_input_output.py  test_message.py  test_parser.py  test_segment.py  test_serializer.py  test_token.py  test_tokenizer.py
src/tests/data/: order.edi  patient1.edi  patient2.edi  wikipedia.edi
tests/: conftest.py  test_characters.py  test_controlcharacters.py  test_double_message.py  test_huge_message.py  test_input_output.py  test_interchange_parsing.py  test_mapping.py  test_message.py  test_message_with_colon_at_end.py  test_parser.py  test_sage_coala.py  test_segment.py  test_segmentcollection.py  test_serializer.py  test_syntax_common.py  test_syntax_v1.py  test_token.py  test_tokenizer.py  test_utils.py
tests/data/: hl7.lab  huge_file2.edi  invoice1.edi  invoice_with_colon_at_end.edi  order.edi  order2.edi  patient1.edi  patient3.edi  sage_coala.ped  wikipedia_de.edi
tests/messagetypes/medrpt/: test_medrpt.py
tests/messagetypes/paxlst/: test_una.py  test_unb.py
tests/paxlst/: test_una.py
tests/segments/: test_una.py  test_unb.py
tests/test_analyzer/: test_analyzer.py
tests/test_edi_energy/: test_collections.py  test_formats.py  test_input_output.py  test_segment.py  test_segmentcollection.py
tests/test_pydifact/: test_characters.py  test_huge_message.py  test_input_output.py  test_mapping.py  test_message_with_colon_at_end.py  test_parser.py  test_tokenizer.py
tests/test_pydifact_base/: test_input_output.py  test_token.py
utils/: dev.py
(+244 files in other folders)
