[project]
name = "pydifact"
dynamic = ["version"]
authors = [{ name = "Christian González", email = "christian.gonzalez@nerdocs.at" }]
license = { "file" = "LICENSE" }
description = "Pydifact is a library that aims to provide complete support for reading and writing EDIFACT files. These file format, despite being old, is still a standard in many business cases. In Austria e.g., it is used for the transfer of medical reports between medical doctors."
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries"
]
requires-python = ">=3.8"

[dependencies]
# none

[project.optional-dependencies]
dev = [
    "pytest>=8.0.1",
    "pytest-cov>=4.1.0",
    "pytest-profiling>=1.7.0",
    "keyring>=24.3.0",
    "Sphinx>=7.2.0",
    "setuptools>=69.1.0",
    "wheel>=0.42.0",
    "black>=24.0.0",
    "sphinx-rtd-theme>=2.0.0"
 ]

[project.urls]
Documentation = "https://pydifact.readthedocs.io"
Repository = "https://github.com/nerdocs/pydifact"
Issues =  "https://github.com/nerdocs/pydifact/issues"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "pydifact.__version__"}
