[metadata]
name = pydifact
version = attr:pydifact.__version__
author =  Christian González
author_email = christian.gonzalez@nerdocs.at
description = A Python EDI file parser.
# install_requires=[]
url = https://github.com/nerdocs/pydifact
packages =
    pydifact
    pydifact.control
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    # 'Topic :: Documentation :: Sphinx
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Medical Science Apps
    Topic :: Software Development :: Libraries
