[options]
packages = pydifact, pydifact.control

[metadata]
name = pydifact
version = attr:pydifact.__version__
author =  Christian González
author_email = christian.gonzalez@nerdocs.at
description = A Python EDI file parser.
long_description = file: README.md
long_description_content_type = text/markdown
# install_requires=[]
url = https://github.com/nerdocs/pydifact
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    # 'Topic :: Documentation :: Sphinx
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries
